--- a/index.html
+++ b/index.html
@@ -133,7 +133,109 @@
           </div>
         </div>
       </nav>
-      
+      <div class="header_bottom">
+        <div class="row">
+          <div class="col-sm-12 col-md-4">
+            <ul class="list-group text-center text-md-start py-2">
+              <li class="list-group-item border-0">
+                <a href="#">
+                  Woman’s Fashion
+                </a>
+              </li>
+              <li class="list-group-item border-0">
+                <a href="#">
+                  Men’s Fashion
+                </a>
+              </li>
+              <li class="list-group-item border-0">
+                <a href="#">
+                  Electronics
+                </a>
+              </li>
+              <li class="list-group-item border-0">
+                <a href="#">
+                  Home & Lifestyle
+                </a>
+              </li>
+              <li class="list-group-item border-0">
+                <a href="#">
+                  Medicine
+                </a>
+              </li>
+              <li class="list-group-item border-0">
+                <a href="#">
+                  Sports & Outdoor
+                </a>
+              </li>
+              <li class="list-group-item border-0">
+                <a href="#">
+                  Baby’s & Toys
+                </a>
+              </li>
+              <li class="list-group-item border-0">
+                <a href="#">
+                  Groceries & Pets
+                </a>
+              </li>
+              <li class="list-group-item border-0">
+                <a href="#">
+                  Health & Beauty
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-8">
+            <div id="carouselExampleIndicators" class="carousel slide slide--color mt-2 py-3 py-lg-4 text-center rounded" data-bs-ride="carousel" data-bs-interval="3000">
+              <div class="carousel-inner">
+                 <div class="carousel-item active">
+                  <div class="row">
+                    <div class="col-md-6 d-md-flex flex-md-column justify-content-md-center">
+                      <div class="pb-2 d-flex justify-content-center align-items-center">
+                        <svg class="me-3" width="30" height="30" viewBox="0 0 384 512" fill="white" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M318.7 268c-.2-52.6 42.9-77.8 44.8-79.1-24.5-35.8-62.5-40.7-76-41.2-32.2-3.3-62.8 18.9-79 18.9-16.3 0-41.3-18.5-68-18-35 0-67.4 20.4-85.5 51.9-36.6 63.5-9.4 157.1 26.3 208.5 17.5 25.4 38.3 53.8 65.7 52.7 26.1-1 36-17 67.4-17 31.3 0 40.1 17 67.4 16.5 27.9-.4 45.5-25.8 62.8-51.4 19.7-28.8 27.9-56.7 28.2-58.2-.6-.2-54-20.8-54.3-82.6zM260.4 81.4c14.7-17.8 24.6-42.6 21.8-67.4-21.1.9-46.6 14-61.7 31.8-13.5 15.6-25.3 40.7-22.1 64.6 23.4 1.8 47.4-11.9 62-29z"/>
+                        </svg>
+                        iPhone 14 Series                        
+                      </div>
+                      <h2 class="py-1 fs-1">
+                        Up to 10% off Voucher
+                      </h2>
+                      <div>
+                        <a href="#" class="py-3">
+                          <span class="slide_shop me-2">Shop Now</span>
+                          <svg width="18" height="17" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M3.5 12H20M20 12L13 5M20 12L13 19" stroke="#FAFAFA" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>                            
+                        </a>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <img src="./images/header/hero_endframe__cvklg0xk3w6e_large 2.png" class="d-block w-100" alt="iphone">
+                    </div>
+                  </div>
+                </div>
+                 <div class="carousel-item">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <h5 class="green_c">Categories</h5>
+                      <h2 class="py-3">Enhance Your Music Experience</h2>
+                      <div class="time_circles">
+                        <span class="time_circle">05 Days</span>
+                      <span class="time_circle">23 Houres</span>
+                      <span class="time_circle">59 Minutes</span>
+                      <span class="time_circle">35 Seconds</span>
+                      </div>
+                      <button type="button" class="btn green_bg my-3">Buy Now!</button>
+                    </div>
+                    <div class="col-md-6">
+                      <img src="./images/header/JBL_BOOMBOX_2_HERO_020_x1 (1) 1.png" class="d-block w-100" alt="speaker">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
 
   
