--- a/sign-up.html
+++ b/sign-up.html
@@ -43,16 +43,6 @@
               </ul>
   
               <div class="d-flex align-items-center mt-3 mt-lg-0 gap-3">
-                <div class="position-relative">
-                  <input class="form-control pe-5" type="search" placeholder="What are you looking for?"
-                    aria-label="Search">
-                  <svg class="position-absolute" style="top: 50%; right: 12px; transform: translateY(-50%);" width="18"
-                    height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="8" cy="8" r="6" stroke="black" stroke-width="1.5" />
-                    <line x1="12" y1="12" x2="17" y2="17" stroke="black" stroke-width="1.5" />
-                  </svg>
-                </div>
-  
                 <a href="#">
                   <svg class="align-middle nav_icon" width="22" height="32" viewBox="0 0 22 20" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -182,6 +172,7 @@
   </div>
 
     <script type="module" src="./scripts/index.js"></script>
+    <script src="./scripts/sign-up.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
