page sign up main

--- a/sign-up.html
+++ b/sign-up.html
@@ -168,7 +168,61 @@
         
       </header>
 
-      
+      <main>
+        <div class="row">
+            <div class="col-12 col-md-6 sign_img">
+                <div>
+                    <img class="w-100 rounded-2" src="./images/sign-up/dl.beatsnoop 1.png" alt="sign up">
+                </div>
+            </div>
+            <div class="col-12 col-md-6 d-flex">
+            <div class="sign_form mx-auto d-flex justify-content-center align-items-center flex-column">
+                  <div class="mt-3 sign_header">
+                    <h1 class="Medium sign_title">Create an account</h1>
+                    <p class="fs-5 pt-2 pb-4">Enter your details below</p>
+                </div>
+                <div class="sign_input">
+                    <div>
+                        <input class=" w-100 form-control border-0 border-bottom" type="text" placeholder="Name">
+                    </div>
+                    <div>
+                        <input class="sign_form w-100 form-control border-0 border-bottom" type="text" placeholder="Email or Phone Number">
+                    </div>
+                    <div class="mb-4">
+                        <input class="sign_form w-100 form-control border-0 border-bottom" type="text" placeholder="Password">
+                    </div>
+                    <button class="border-0 red_sections-bg sign_button w-100 mb-3 rounded-2 button_link">
+                        <a href="#" class="Medium slide_shop Medium ">Create Account</a>
+                    </button>
+                    <button class="border-secondary border-1 bg-transparent w-100 rounded-2 button_link--google">
+                        <a href="#">
+                            <span>
+                                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_1043_3330)">
+                                    <path d="M23.766 12.7764C23.766 11.9607 23.6999 11.1406 23.5588 10.3381H12.24V14.9591H18.7217C18.4528 16.4494 17.5885 17.7678 16.323 18.6056V21.6039H20.19C22.4608 19.5139 23.766 16.4274 23.766 12.7764Z" fill="#4285F4"/>
+                                    <path d="M12.2401 24.5008C15.4766 24.5008 18.2059 23.4382 20.1945 21.6039L16.3276 18.6055C15.2517 19.3375 13.8627 19.752 12.2445 19.752C9.11388 19.752 6.45946 17.6399 5.50705 14.8003H1.5166V17.8912C3.55371 21.9434 7.7029 24.5008 12.2401 24.5008Z" fill="#34A853"/>
+                                    <path d="M5.50253 14.8003C4.99987 13.3099 4.99987 11.6961 5.50253 10.2057V7.11481H1.51649C-0.18551 10.5056 -0.18551 14.5004 1.51649 17.8912L5.50253 14.8003Z" fill="#FBBC04"/>
+                                    <path d="M12.2401 5.24966C13.9509 5.2232 15.6044 5.86697 16.8434 7.04867L20.2695 3.62262C18.1001 1.5855 15.2208 0.465534 12.2401 0.500809C7.7029 0.500809 3.55371 3.05822 1.5166 7.11481L5.50264 10.2058C6.45064 7.36173 9.10947 5.24966 12.2401 5.24966Z" fill="#EA4335"/>
+                                    </g>
+                                    <defs>
+                                    <clipPath id="clip0_1043_3330">
+                                    <rect width="24" height="24" fill="white" transform="translate(0 0.5)"/>
+                                    </clipPath>
+                                    </defs>
+                                    </svg>          
+                            </span>
+                            <span class="" >Sign up with Google</span>
+                        </a>
+                    </button>
+                </div>
+                <p class="mt-3 fs-6">
+                    Already have account?
+                    <a href="#" class="Medium sign_log ms-2">Log in</a>
+                </p>
+            </div>
+            </div>
+        </div>
+      </main>
   </div>
 
     <script type="module" src="./scripts/index.js"></script>
