--- a/sign-up.html
+++ b/sign-up.html
@@ -224,6 +224,7 @@
         </div>
       </main>
   </div>
+  <footer-user></footer-user>
 
     <script type="module" src="./scripts/index.js"></script>
     <script src="./scripts/sign-up.js"></script>
