--- a/loge-in.html
+++ b/loge-in.html
@@ -168,6 +168,40 @@
             </nav>
             
           </header>
+
+          <main>
+            <div class="row">
+                <div class="col-12 col-md-6 sign_img">
+                    <div>
+                        <img class="w-100 rounded-2" src="./images/sign-up/dl.beatsnoop 1.png" alt="sign up">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 d-flex">
+                <div class="sign_form mx-auto d-flex justify-content-center align-items-center flex-column">
+                      <div class="mt-3 sign_header">
+                        <h1 class="Medium sign_title">Log in to Exclusive</h1>
+                        <p class="fs-5 pt-2 pb-4">Enter your details below</p>
+                    </div>
+                    <div class="sign_input">
+                        <div>
+                            <input class="sign_form w-100 form-control border-0 border-bottom" type="text" placeholder="Email or Phone Number">
+                        </div>
+                        <div class="mb-4">
+                            <input class="sign_form w-100 form-control border-0 border-bottom" type="text" placeholder="Password">
+                        </div>
+                       <div class="d-flex justify-content-between align-items-center">
+                        <button class="border-0 red_sections-bg rounded-2 py-3 px-5">
+                            <a href="#" class="Medium slide_shop Medium ">Log In</a>
+                        </button>
+                            <a href="#" class="fs-5 red_sections-c">
+                                Forget Password?
+                            </a>
+                       </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+          </main>
     </div>
 
 
