page log in footer

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         </div>
       </div>
     </header>
-
+    <!-- main -->
     <main class="pt-4 mb-5 pt-md-5">
       <section class="border-bottom border-secondary">
         <!-- head -->
@@ -1931,6 +1931,7 @@
 
 
   </div>
+  <!-- footer -->
   <footer-user></footer-user>
 
 
