--- a/loge-in.html
+++ b/loge-in.html
@@ -168,7 +168,7 @@
             </nav>
             
           </header>
-
+          <!-- main -->
           <main>
             <div class="row">
                 <div class="col-12 col-md-6 sign_img">
@@ -203,6 +203,8 @@
             </div>
           </main>
     </div>
+    <!-- footer -->
+    <footer-user></footer-user>
 
 
      <script type="module" src="./scripts/index.js"></script>
