--- a/sign-up.html
+++ b/sign-up.html
@@ -167,7 +167,7 @@
         </nav>
         
       </header>
-
+      <!-- main -->
       <main>
         <div class="row">
             <div class="col-12 col-md-6 sign_img">
@@ -224,6 +224,7 @@
         </div>
       </main>
   </div>
+  <!-- footer -->
   <footer-user></footer-user>
 
     <script type="module" src="./scripts/index.js"></script>
