--- a/loge-in.html
+++ b/loge-in.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./styles/font.css">
   <link rel="stylesheet" href="./styles/index.css">
   <link rel="stylesheet" href="./styles/sign-up.css">
+  <link rel="stylesheet" href="./styles/log-in.css">
   <link rel="stylesheet" href="./styles/responsive.css">
   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
@@ -190,10 +191,10 @@
                             <input class="sign_form w-100 form-control border-0 border-bottom" type="text" placeholder="Password">
                         </div>
                        <div class="d-flex justify-content-between align-items-center">
-                        <button class="border-0 red_sections-bg rounded-2 py-3 px-5">
+                        <button class="border-0 red_sections-bg rounded-2 py-3 px-5 log_button">
                             <a href="#" class="Medium slide_shop Medium ">Log In</a>
                         </button>
-                            <a href="#" class="fs-5 red_sections-c">
+                            <a href="#" class="fs-5 red_sections-c link_underline">
                                 Forget Password?
                             </a>
                        </div>
@@ -208,7 +209,7 @@
 
 
      <script type="module" src="./scripts/index.js"></script>
-    <script src="./scripts/logn-up.js"></script>
+    <script src="./scripts/log-in.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
