API for sign up & log in

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- header nav (navbar) -->
       <nav class="navbar nav_item shadow  navbar-expand-lg px-3 border-bottom border-secondary fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand color fw-bold fs-3 py-2 py-lg-3" href="#">Exclusive</a>
+          <a class="navbar-brand color fw-bold fs-3 py-2 py-lg-3" href="index.html">Exclusive</a>
 
           <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
             aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,13 +33,13 @@
                 <a class="nav-link color hover_underline" href="#">Home</a>
               </li>
               <li class="nav-item me-lg-3">
-                <a class="nav-link color hover_underline" href="#">Contact</a>
+                <a class="nav-link color hover_underline" href="#Contact">Contact</a>
               </li>
               <li class="nav-item me-lg-3">
-                <a class="nav-link color hover_underline" href="#">About</a>
+                <a class="nav-link color hover_underline" href="#About">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link color hover_underline" href="#">Sign Up</a>
+                <a class="nav-link color hover_underline" href="sign-up.html">Sign Up</a>
               </li>
             </ul>
 
@@ -1804,7 +1804,7 @@
         </div>
       </section>
 
-      <section class="border-bottom border-secondary py-5">
+      <section id="About" class="border-bottom border-secondary py-5">
         <!-- head -->
         <h3 class="red_sections-c relative title_today d-flex align-items-center pb-2">
           <span class="ps-5 SemiBold">Featured</span>
@@ -1858,7 +1858,7 @@
         
       </section>
       <!-- icon last section -->
-      <div class="d-flex flex-wrap gap-4 justify-content-center align-items-center my-5 py-5">
+      <div id="Contact" class="d-flex flex-wrap gap-4 justify-content-center align-items-center my-5 py-5">
         <div class="card border border-0 d-flex justify-content-center align-items-center">
          <div class="item_outside rounded-circle d-flex justify-content-center align-items-center">
            <div class="item_inside d-flex justify-content-center align-items-center rounded-circle">
