--- a/loge-in.html
+++ b/loge-in.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse justify-content-between align-items-center" id="mainNav">
                   <ul class="navbar-nav mb-2 mb-lg-0 mx-auto d-flex flex-lg-row flex-column align-items-lg-center">
                     <li class="nav-item me-lg-3">
-                      <a class="nav-link color hover_underline" href="#">Home</a>
+                      <a class="nav-link color hover_underline" href="index.html">Home</a>
                     </li>
                     <li class="nav-item me-lg-3">
                       <a class="nav-link color hover_underline" href="#">Contact</a>
@@ -40,7 +40,7 @@
                       <a class="nav-link color hover_underline" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link color hover_underline" href="#">Sign Up</a>
+                      <a class="nav-link color hover_underline" href="sign-up.html">Sign Up</a>
                     </li>
                   </ul>
       
@@ -185,14 +185,14 @@
                     </div>
                     <div class="sign_input">
                         <div>
-                            <input class="sign_form w-100 form-control border-0 border-bottom" type="text" placeholder="Email or Phone Number">
+                            <input id="email-input" class="sign_form w-100 form-control border-0 border-bottom" type="text" placeholder="Email or Phone Number">
                         </div>
                         <div class="mb-4">
-                            <input class="sign_form w-100 form-control border-0 border-bottom" type="text" placeholder="Password">
+                            <input id="password-input" class="sign_form w-100 form-control border-0 border-bottom" type="text" placeholder="Password">
                         </div>
                        <div class="d-flex justify-content-between align-items-center">
                         <button class="border-0 red_sections-bg rounded-2 py-3 px-5 log_button">
-                            <a href="#" class="Medium slide_shop Medium ">Log In</a>
+                            <a href="#" class="Medium slide_shop Medium">Log In</a>
                         </button>
                             <a href="#" class="fs-5 red_sections-c link_underline">
                                 Forget Password?
