--- a/sign-up.html
+++ b/sign-up.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse justify-content-between align-items-center" id="mainNav">
               <ul class="navbar-nav mb-2 mb-lg-0 mx-auto d-flex flex-lg-row flex-column align-items-lg-center">
                 <li class="nav-item me-lg-3">
-                  <a class="nav-link color hover_underline" href="#">Home</a>
+                  <a class="nav-link color hover_underline" href="index.html">Home</a>
                 </li>
                 <li class="nav-item me-lg-3">
                   <a class="nav-link color hover_underline" href="#">Contact</a>
@@ -38,7 +38,7 @@
                   <a class="nav-link color hover_underline" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link color hover_underline" href="#">Sign Up</a>
+                  <a class="nav-link color hover_underline" href="sign-up.html">Sign Up</a>
                 </li>
               </ul>
   
@@ -183,13 +183,13 @@
                 </div>
                 <div class="sign_input">
                     <div>
-                        <input class=" w-100 form-control border-0 border-bottom" type="text" placeholder="Name">
+                        <input id="name_input" class=" w-100 form-control border-0 border-bottom" type="text" placeholder="Name">
                     </div>
                     <div>
-                        <input class="sign_form w-100 form-control border-0 border-bottom" type="text" placeholder="Email or Phone Number">
+                        <input id="email_input" class="sign_form w-100 form-control border-0 border-bottom" type="text" placeholder="Email or Phone Number">
                     </div>
                     <div class="mb-4">
-                        <input class="sign_form w-100 form-control border-0 border-bottom" type="text" placeholder="Password">
+                        <input id="password_input" class="sign_form w-100 form-control border-0 border-bottom" type="text" placeholder="Password">
                     </div>
                     <button class="border-0 red_sections-bg sign_button w-100 mb-3 rounded-2 button_link">
                         <a href="#" class="Medium slide_shop Medium ">Create Account</a>
@@ -217,7 +217,7 @@
                 </div>
                 <p class="mt-3 fs-6">
                     Already have account?
-                    <a href="#" class="Medium sign_log ms-2">Log in</a>
+                    <a href="loge-in.html" class="Medium sign_log ms-2 text-danger">Log in</a>
                 </p>
             </div>
             </div>
